Fixed off center sound cloud link on about page

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -189,7 +189,7 @@ ul
 #contact
 {
 	display: inline;
-	padding:2.5%;
+	padding-top:2.5%;
 	margin-right: auto;
 	margin-left: auto;
 	text-align: center;
